--- a/countdown.htm
+++ b/countdown.htm
@@ -20,7 +20,7 @@ body{
   letter-spacing: 5px;
 }
 
-.days, .hours, .minutes, .seconds {
+.days {
   display: inline-block;
   padding: 20px;
   width: 100px;
@@ -31,18 +31,7 @@ body{
   background: #EF2F3C;
 }
 
-.hours {
-  background: #eeeeee;
-  color: #183059;
-}
 
-.minutes {
-  background: #276FBF;
-}
-
-.seconds {
-  background: #F0A202;
-}
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
