--- a/newcountdown.htm
+++ b/newcountdown.htm
@@ -28,19 +28,19 @@ body{
 }
 
 .days {
-  background: #E74C3C;
+  background: #F5B7B1;
 }
 
 .hours {
-  background: #F39C12;
+  background: #FAD7A0;
 }
 
 .minutes {
-  background: #F1C40F;
+  background: #F9E79F;
 }
 
 .seconds {
-  background: #27AE60;
+  background: #A9DFBF;
 }
 
 .numbers {
