--- a/newcountdown.htm
+++ b/newcountdown.htm
@@ -45,7 +45,7 @@ body{
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #183059;
+  color:  #eeeeee;
   font-size: 4em;
   text-align: center;
 }
