--- a/newcountdown.htm
+++ b/newcountdown.htm
@@ -12,7 +12,7 @@ body{
 }
   
 #timer {
-  color: #eeeeee;
+  color: #17202A;
   text-align: center;
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
@@ -45,7 +45,7 @@ body{
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #eeeeee;
+  color:  #17202A;
   font-size: 4em;
   text-align: center;
 }
